# autonomous-profiler

./: .gitignore  2026-06-13-150007-i-want-to-make-an-advanced-profiler-tool-that-can.txt  LICENSE  README.md
.claude/skills/autoperf/: SKILL.md
.github/workflows/: deploy.yml
autonomous-profiler/: Cargo.toml  README.md
autonomous-profiler/crates/ap-cli/: Cargo.toml
autonomous-profiler/crates/ap-cli/src/: main.rs
autonomous-profiler/crates/ap-collectors/: Cargo.toml
autonomous-profiler/crates/ap-core/: Cargo.toml
autonomous-profiler/crates/ap-mcp/: Cargo.toml
examples/: autoperf.toml
findings-viz/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
findings-viz/demo-data/: activity.json  bench.json  diffs.json  index.json
findings-viz/demo-data/runs/: polars-workload-217923.json  polars-workload-225468.json  polars-workload-291715.json  polars-workload-3500.json  polars-workload-486410.json  polars-workload-587749.json  polars-workload-716013.json  polars-workload-731222.json  polars-workload-732005.json  polars-workload-775326.json  polars-workload-876602.json  polars-workload-986132.json  run-full-379107.json  run-full-815768.json  run-full-933656.json  run-phase-132811.json  run-phase-18986.json  run-phase-232248.json  run-phase-270772.json  (+20 more)
findings-viz/scripts/: capture-diffs.mjs  snapshot.mjs
findings-viz/src/: ActivityFeed.tsx  App.tsx  BenchTimeline.tsx  DiffModal.tsx  WinsView.tsx  styles.css  types.ts  util.ts
hackday/: README.md  build-transcript-2026-06-13.txt
highlights/: polars-resolve-chunked-idx.md
polars-bench/: Cargo.toml
polars-bench/examples/: polars_workload.rs
workflows/: 01-improve-loop-until-dry.js  02-swarm-tournament-multiround.js  03-swarm-external-target-fingerprint.js  README.md  autoperf-improve.js
(+16 files in other folders)
